<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UsetAdmin">


    <Button
        android:id="@+id/ExposBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:onClick="verExhibiciones"
        android:text="@string/exhibiciones"/>

    <Button
        android:id="@+id/IngExpo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:onClick="agregarExhibiciones"
        android:text="@string/agregarExpo"/>

    <Button
        android:id="@+id/ModExpo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:onClick="modificarExhibiciones"
        android:text="@string/modExpo"/>

</LinearLayout>